[package]
name = "bevy_renderdoc"
version = "0.2.0"
edition = "2021"
authors = ["Viktor Pramberg <hi@viktorpramberg.com>"]
description = "RenderDoc plugin for bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/pramberg/bevy_renderdoc"
repository = "https://github.com/pramberg/bevy_renderdoc"

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_render"] }
renderdoc = "0.10.1"
sysinfo = "0.24.6"

[dev-dependencies]
bevy = "0.9"
